# cmfo-compute

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.py  test_api.py  test_cmfo.py
.github/workflows/: ci.yml
cmfo_compute/: __init__.py
cmfo_compute/core/: __init__.py  gamma_phi.py  phi_math.py  t7_tensor.py
cmfo_compute/logic/: __init__.py  phi_logic.py
tests/: test_api.py  test_basic.py
